# tnc-blue-carbon-cost-tool

./: .gitignore  .npmrc  README.md  docker-compose.test.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
computations/: pyproject.toml
computations/src/computations/: core.py  main.py
computations/tests/: test_complexity.py  test_main.py
data/: .gitignore  .pre-commit-config.yaml  Data_ingestion_WIP.xlsm  README.md  pyproject.toml
data/excel/: .~lock.Carbon-Cost Data Upload.xlsm#  Carbon-Cost Data Upload v02.xlsm  Carbon-Cost Data Upload.xlsm  data_ingestion.xlsm  data_ingestion.xlsm.dvc  data_ingestion_WIP.xlsm  excel_to_db_map.json
data/localstack/cache/: machine.json
data/notebooks/: High_level_overview.ipynb  TNC_BC_Countries.ipynb  TNC_BC_High_level_overview.ipynb  TNC_BC_High_level_overview_v1.ipynb  TNC_BC_High_level_overview_v2.ipynb  TNC_BC_Sensitivity_analysis_v1.ipynb  TNC_BC_execute_excel.ipynb  TNC_BC_irr.ipynb  TNC_BC_prototype.ipynb  TNC_BC_prototype_v1.ipynb  TNC_BC_prototype_v2.ipynb  TNC_BlueCarbonTool_prototype-ALEX.ipynb  TNC_BlueCarbonTool_prototype.ipynb  TNC_BlueCarbonTool_prototype_v1.ipynb  TNC_BlueCarbonTool_prototype_v2.ipynb  TNC_BlueCarbonTool_sensitivity_analysis_v1.ipynb  run_calculator.py
data/notebooks/.ipynb_checkpoints/: TNC_BlueCarbonTool_prototype-checkpoint.ipynb  test-checkpoint.ipynb
data/src/: blue_carbon_project.py  revenue_profit_calculator.py  test.py  utils.py
data/src/bcc_model/: blue_carbon_project.py  breakeven_cost_calculator.py  cost_calculator.py  revenue_profit_calculator.py  sensitivity_analysis.py  sequestration_credits_calculator.py  types.py  (+1 more)
(+1154 files in other folders)
