[project]
name = "computations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Biel Stela", email = "biel.stela@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "ruff>=0.11.3",
]
