[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc-gdrive>=3.0.1",
    "dvc>=3.55.2",
    "folium>=0.18.0",
    "geopandas>=1.0.1",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "numpy-financial>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "D1", # pydocstyle errors
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # flake8
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "N", # Naming conventions
    "I", # isort
]
ignore = [
    "D104", # Missing docstring in public package
    "D102",
    "D101",
    "D100",
    "D103"
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = [
    "D100", # Missing docstring in public module
    "D103", # Missing docstring in public function
]
"*.ipynb" = [
    "B018", # Useless expression. Found in cells with something like `df.head()`, used in notebooks to display data
]
